# RSVP-Reader

./: .gitignore  DEVLOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
docs/superpowers/specs/: 2026-06-23-self-update-design.md
firmware/: README.md  platformio.ini
firmware/src/: Ft6336.h  Menu.cpp  Menu.h  Navigator.cpp  Navigator.h  Renderer.h  RsvpEngine.cpp  RsvpEngine.h  actions.h  common_words.h  main.cpp  pivot.h  tokenizer.h
firmware/src/fonts/: FreeSans12pt7b.h  FreeSans18pt7b.h  FreeSans9pt7b.h  FreeSansBold12pt7b.h  FreeSansBold18pt7b.h  FreeSansBold24pt7b.h
firmware/test/: test_engine.cpp  test_nav.cpp
hardware/: ORDER.md  README.md  case.scad
packaging/: build_linux.sh  build_macos.sh  installer.iss  make_icon.py  rsvp.desktop  rsvp.spec  rsvp_app.py
rsvp/: __init__.py  __main__.py  battery.py  export.py  store.py
rsvp/books/: __init__.py  epub.py  loader.py  pdf.py
rsvp/core/: __init__.py  chapters.py  common_words.py  engine.py  pivot.py  tokenizer.py
rsvp/nav/: __init__.py  actions.py  menu.py  navigator.py
rsvp/ui/: __init__.py  app.py  layout.py  update_dialog.py
rsvp/update/: __init__.py  apply.py  assets.py  downloader.py  release.py  updater.py  version.py
samples/: sample.txt  the-lamplighter.txt  the-paper-boat.epub
tests/: test_ui_layout.py  test_update_apply.py  test_update_assets.py  test_update_downloader.py  test_update_release.py  test_update_updater.py  test_update_version.py
