[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "rsvp-pocket-reader"
description = "A quiet, offline, single-purpose RSVP speed reader."
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = []          # .txt and .epub need no third-party packages

[project.optional-dependencies]
pdf = ["pypdf>=4"]         # only needed to read .pdf books

[project.gui-scripts]
rsvp-reader = "rsvp.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "rsvp.__version__"}

[tool.setuptools.packages.find]
include = ["rsvp*"]
